src/ui/snapshots/terminal_rpg__ui__tests__inspection_closed_door_ascii.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
+ The Ossuary ---------------------------------------++ Inspect ---------------+
|                                                    ||INSPECT                 |
|                                #####               ||36,4  VISIBLE           |
|                             ..........             ||                        |
|                            #..........#            ||Sealed Door             |
|                            +...........            ||An ancient door swollen |
|                            #..........#            ||shut with damp.         |
|                          ........@......#          ||                        |
|                            #..........#            ||                        |
|                            #..........#            ||                        |
|                            #..........             ||                        |
|                                #####               ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
