src/ui/snapshots/terminal_rpg__ui__tests__inspection_details_unicode.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Inspect ───────────────┐
│                                                    ││INSPECT                 │
│                                █████               ││42,6  VISIBLE           │
│                             ··········             ││                        │
│                            █··········█            ││Crypt Floor             │
│                            ╬···········            ││Dust lies thick across  │
│                            █··········█            ││worn flagstones.        │
│                          ········@······█          ││                        │
│                            █··········█            ││Grave Knight #0         │
│                            █··········█            ││HP 32/32  Armor 2       │
│                            █··········             ││Active                  │
│                                █████               ││An oath-bound warrior   │
│                                                    ││armored against the     │
│                                                    ││grave.                  │
│                                                    ││                        │
│                                                    ││Skeleton #10            │
│                                                    ││HP 10/10  Armor 2       │
│                                                    ││Active                  │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│The crypt waits in silence.                                                   │
│You descend into the ossuary.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
