src/ui/snapshots/terminal_rpg__ui__tests__inspection_edge_ascii.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
+ The Ossuary ---------------------------------------++ Inspect ---------------+
|                                                    ||INSPECT                 |
|                                        #####       ||0,0  UNKNOWN            |
|                                     ..........     ||                        |
|                                    #..........#    ||The dark keeps its      |
|                                    +...........    ||secrets.                |
|                                    #..........#    ||                        |
|                                  ........@......#  ||                        |
|                                    #..........#    ||                        |
|                                    #..........#    ||                        |
|                                    #..........     ||                        |
|                                        #####       ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
|                                                    ||                        |
+----------------------------------------------------++------------------------+
+ Events ----------------------------------------------------------------------+
|The crypt waits in silence.                                                   |
|You descend into the ossuary.                                                 |
+------------------------------------------------------------------------------+
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
